--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.6",
+    "@coinbase/wallet-sdk": "^3.5.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@ethersproject/providers": "^5.7.2",
+    "@walletconnect/web3-provider": "^1.8.0",
     "add": "^2.0.6",
+    "ethers": "^5.7.2",
+    "framer-motion": "^7.6.1",
     "next": "12.3.1",
+    "prettier": "^2.7.1",
     "qrscan": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
+    "web3modal": "^1.9.9",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@types/node": "18.11.5",
+    "@types/react": "18.0.22",
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "typescript": "4.8.4"
   }
 }
