--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
+    "wagmi": "^0.7.5",
     "web3modal": "^1.9.9",
     "yarn": "^1.22.19"
   },
