--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ethersproject/providers": "^5.7.2",
     "@walletconnect/web3-provider": "^1.8.0",
     "add": "^2.0.6",
+    "axios": "^1.1.3",
     "ethers": "^5.7.2",
     "framer-motion": "^7.6.1",
     "next": "12.3.1",
@@ -24,6 +25,7 @@
     "qrscan": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.8",
     "react-qr-reader": "^3.0.0-beta-1",
     "wagmi": "^0.7.5",
     "web3modal": "^1.9.9",
