--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "qrscan": "^1.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-jdenticon": "^1.0.0",
     "react-qr-code": "^2.0.8",
     "react-qr-reader": "^3.0.0-beta-1",
     "wagmi": "^0.7.5",
